# agent-catalog-quickstart

./: .agentcignore  .cursorrules  .gitignore  .gitmodules  PYTHON.md  README.md  TROUBLESHOOTING.md  common.txt  limit.txt  main.py  prompt.txt  pyproject.toml  python.md  run_evaluations.py  suggest-cleanup-script.sh  temp.txt  tools.py
docs/: AGENTC_GUIDE.md  PYTHON_LINUX.md  (+13 more)
examples/flight_search_agent/: README.md  agentcatalog_index.json  flight_search_agent_tutorial.ipynb  flight_search_agent_tutorial.json  main.py  main.py.backup  parameter_mapper.py  pyproject.toml
examples/flight_search_agent/data/: flight_data.py
examples/flight_search_agent/evals/: arize_guide.txt  eval_arize.py  eval_arize.py.backup  eval_arize_simple.py  eval_short.py
examples/flight_search_agent/prompts/: flight_search_assistant.yaml
examples/flight_search_agent/tools/: lookup_flight_info.py  lookup_flight_info.sqlpp  manage_flight_booking.py  retrieve_flight_bookings.py  save_flight_booking.py  search_flight_policies.py  search_flight_policies.yaml  search_flight_policies2.yaml
examples/hotel_support_agent/: .env.example  README.md  agentcatalog_index.json  examples.txt  hotel_support_agent_tutorial.ipynb  hotel_support_agent_tutorial.json  main.py  pyproject.toml  taskmaster.md
examples/hotel_support_agent/data/: hotel_data.py
examples/hotel_support_agent/evals/: eval_arize.py  eval_arize_simple.py
examples/hotel_support_agent/prompts/: hotel_search_assistant.yaml  prompts.py
examples/hotel_support_agent/tests/: test_db.py  test_search.py  test_search_api.py
examples/hotel_support_agent/tools/: get_hotel_details.py  search_vector_database.py
examples/route_planner_agent/: README.md  main.py  main.py.backup  pyproject.toml  route_planner_ipynb.ipynb  taskmaster.md
examples/route_planner_agent/data/: route_data.py
examples/route_planner_agent/evals/: eval_arize.py  ground_truth.py  route_planner_evaluation_report.md
examples/route_planner_agent/prompts/: route_planner_assistant.yaml
examples/route_planner_agent/tools/: calculate_distance.py  compare_transport_options.py  find_points_of_interest.py  search_routes.py
notebooks/flight_search_agent_langraph/: .env.sample  agentcatalog_index.json  architecture.md  debug_reviews.py  flight_search_agent_tutorial.ipynb  flight_search_agent_tutorial.json  flight_search_agent_tutorial2.ipynb  flight_search_agent_tutorial5.ipynb  main.py  main.py.logger  pyproject.toml
notebooks/flight_search_agent_langraph/data/: airline_reviews_data.py  queries.py
notebooks/flight_search_agent_langraph/errors/: 1.txt  2.txt  3.txt  4.txt
notebooks/flight_search_agent_langraph/evals/: eval_arize.py  templates.py
notebooks/flight_search_agent_langraph/logs/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  error1.txt  error2.txt  error3.txt  error4.txt  error5.txt  error6.txt  nvidia-llama-3.2-nv-embedqa-1b-v2-meta-llama-Llama-3.1-8B-Instruct-1.txt  nvidia-llama-3.2-nv-embedqa-1b-v2-meta-llama-Llama3-8B-Instruct.txt
notebooks/flight_search_agent_langraph/prompts/: flight_search_assistant.yaml  router_classifier.yaml
notebooks/flight_search_agent_langraph/tests/: test_query.py
notebooks/flight_search_agent_langraph/tools/: lookup_flight_info.py  retrieve_flight_bookings.py  save_flight_booking.py  schemas.py  search_airline_reviews.py
notebooks/flight_search_agent_langrpaph/: agentcatalog_index.json  main.py  parameter_mapper.py  pyproject.toml
notebooks/flight_search_agent_langrpaph/data/: airline_reviews_data.py  queries.py
notebooks/flight_search_agent_langrpaph/evals/: eval_arize.py
notebooks/flight_search_agent_langrpaph/prompts/: flight_search_assistant.yaml
notebooks/flight_search_agent_langrpaph/tests/: test_query.py
notebooks/flight_search_agent_langrpaph/tools/: lookup_flight_info.py  retrieve_flight_bookings.py  search_airline_reviews.py
notebooks/hotel_search_agent_langchain/: .agentcignore  agentcatalog_index.json  capella_model_services.py  hotel_search_agent_tutorial.ipynb  hotel_search_agent_tutorial.json  main.py  pyproject.toml
notebooks/hotel_search_agent_langchain/data/: hotel_data.py
notebooks/hotel_search_agent_langchain/evals/: eval_arize.py  templates.py
notebooks/hotel_search_agent_langchain/logs/: 1.txt  2.txt  3.txt  answer1.txt  error1.txt  error2.txt  nividia-nv-embedqa-e5-v5+meta-llama-Llama-3.1-8B-Instruct-1.txt  nividia-nv-embedqa-e5-v5+meta-llama-Llama-3.1-8B-Instruct-2.txt  nvidia-llama-3.2-nv-embedqa-1b-v2-meta-llama-Llama-3.1-8B-Instruct-1.txt  nvidia-llama-3.2-nv-embedqa-1b-v2-meta-llama-Llama-3.1-8B-Instruct-2.txt  nvidia-llama-3.2-nv-embedqa-1b-v2-meta-llama-Llama3-8B-Instruct.txt
notebooks/hotel_search_agent_langchain/prompts/: hotel_search_assistant.yaml
notebooks/hotel_search_agent_langchain/tests/: test_search_api.py
notebooks/hotel_search_agent_langchain/tools/: search_vector_database.py
notebooks/hotel_support_agent/: ERRORS.md  README.md  agentcatalog_index.json  hotel_support_agent_tutorial.ipynb  main.py  main.py.backup  pyproject.toml
notebooks/hotel_support_agent/data/: hotel_data.py  queries.py
notebooks/hotel_support_agent/evals/: eval_arize.py
notebooks/hotel_support_agent/prompts/: hotel_search_assistant.yaml
notebooks/hotel_support_agent/tests/: test_db.py
notebooks/hotel_support_agent/tools/: search_vector_database.py
notebooks/landmark_search_agent_llamaindex/: agentcatalog_index.json  landmark_search_agent_tutorial.ipynb  landmark_search_agent_tutorial.json  landmark_search_agent_tutorial2.json  main.py  pyproject.toml
notebooks/landmark_search_agent_llamaindex/data/: landmark_data.py
notebooks/landmark_search_agent_llamaindex/evals/: eval_arize.py  templates.py
notebooks/landmark_search_agent_llamaindex/logs/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  nividia-nv-embedqa-e5-v5+meta-llama-Llama-3.1-8B-Instruct-1.txt.txt  nvidia-llama-3.2-nv-embedqa-1b-v2-meta-llama-Llama-3.1-8B-Instruct-1.txt  nvidia-llama-3.2-nv-embedqa-1b-v2-meta-llama-Llama3-8B-Instruct.txt
(+85 files in other folders)
