[project]
name = "landmark-search-agent"
version = "0.1.0"
description = "Landmark search agent with LlamaIndex, Couchbase vector store, and Capella AI model services"
authors = [
    {name = "Agent Catalog Team"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    # Agent Catalog dependencies (agentc-llamaindex temporarily disabled due to version conflict)
    "agentc @ ../../agent-catalog/libs/agentc",
    # "agentc-llamaindex @ ../../agent-catalog/libs/agentc_integrations/llamaindex",  # Requires llama-index ^0.13.4

    # LlamaIndex core and integrations (PINNED: based on installed versions)
    "llama-index>=0.12.38,<0.13.0",
    "llama-index-vector-stores-couchbase>=0.4.0,<0.5.0",
    "llama-index-embeddings-openai>=0.3.1,<0.4.0",
    "llama-index-embeddings-nvidia>=0.3.0,<0.4.0",
    "llama-index-llms-openai-like>=0.4.0,<0.5.0",
    "llama-index-llms-nvidia>=0.3.0,<0.4.0",
    
    # Couchbase and database
    "couchbase>=4.0.0,<5.0.0",

    # Core dependencies (PINNED: based on installed versions)
    "pydantic>=2.11.0,<3.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
    
    # Data processing and utilities (PINNED: based on installed versions)
    "httpx>=0.28.0,<1.0.0",
    "tqdm>=4.67.0,<5.0.0",
    "pandas>=2.2.0,<3.0.0",
    
    # Arize and evaluation dependencies (PINNED: using previously working versions)
    "arize>=7.51.0,<8.0.0",
    "arize-phoenix>=11.37.0,<12.0.0",
    "arize-phoenix-evals>=2.2.0,<3.0.0",
    "openinference-instrumentation>=0.1.38,<0.2.0",
    "openinference-instrumentation-openai>=0.1.18,<0.2.0",
    "openinference-instrumentation-llama-index>=4.0.0,<5.0.0",

    # uvicorn version constraint for Phoenix LoopSetupType compatibility
    "uvicorn>=0.29.0,<0.30.0"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
jupyter = "*"
tqdm = "*"
pytest = "*"
black = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "DTZ", "EM", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["S101", "COM812", "ISC001"]

[tool.black]
line-length = 100
target-version = ['py312'] 